--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "license": "MIT",
   "dependencies": {
     "contains-path": "^0.1.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "resolve-from": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -31,6 +32,7 @@
     "eslint-config-wpcalypso": "^0.7.1",
     "eslint-plugin-wpcalypso": "^3.1.1",
     "mocha": "^3.2.0",
+    "mockery": "^2.1.0",
     "webpack": "^2.3.3"
   },
   "engines": {
